# 3dbag-specs

./: .gitignore  NOTICE  README.md  attributes.json  attributes.schema.json  pyproject.toml  tox.ini  validate-attributes-json.py
.github/workflows/: lint-and-format.yaml  test.yaml  validate-attributes-json.yaml
resources/: attributes.json  attributes.schema.json
src/python/bag3d/specs/: core.py  resources.py  sort_attributes.py  validate_attributes_json.py
tests/python/: test_specs.py
