[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bag3d-specs"
version = "2025.07.15"
description = "3DBAG specifications."
readme = "README.md"
authors = [{name = "Balázs Dukai", email = "balazs.dukai@3dgi.nl"}]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.24.0",
]

[project.urls]
Repository = "https://github.com/3DBAG/3dbag-specs"

[project.optional-dependencies]
dev = [
    "pytest~=8.3.4",
    "bumpver~=2024.1130",
    "jsonschema~=4.24.0",
    "tox~=4.27.0",
    "tox-uv>=1.26.1",
    "ruff~=0.8.6",
]

[project.scripts]
validate-attributes-json = "bag3d.specs.validate_attributes_json:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src/python"]

[tool.uv]

[tool.ruff]
line-length = 88
include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = false

[tool.bumpver]
current_version = "2025.07.15"
version_pattern = "YYYY.0M.0D"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
