[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bag3d-specs"
version = "2025.07.22"
description = "3DBAG specifications."
readme = "README.md"
authors = [{name = "Balázs Dukai", email = "balazs.dukai@3dgi.nl"}]
license = "Apache-2.0"
license-files = ["LICEN[CS]E*", "NOTICE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
]
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.24.0",
]

[project.urls]
Repository = "https://github.com/3DBAG/3dbag-specs"

[dependency-groups]
dev = [
    "pytest~=8.4.1",
    "bumpver~=2025.1131",
    "tox~=4.27.0",
    "tox-uv>=1.26.1",
    "ruff~=0.12.3",
    "bag3d-specs",
]

[project.scripts]
validate-attributes-json = "bag3d.specs.validate_attributes_json:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.data-files]
"share/bag3d/resources" = ["resources/attributes.json", "resources/attributes.schema.json"]

[tool.setuptools.packages.find]
where = ["src/python"]

[tool.uv]

[tool.uv.sources]
bag3d-specs = { workspace = true }

[tool.ruff]
line-length = 88
include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = false

[tool.bumpver]
current_version = "2025.07.22"
version_pattern = "YYYY.0M.0D"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
